[package]
name = "castor"
version = "0.9.0"
authors = ["Julien Blanchard <julien@typed-hole.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "~0.12"
gdk-pixbuf = "~0.8"
gio = "~0.8"
glib = "~0.9"
glib-sys = "~0.9"
pango = "~0.8"
pango-sys = "~0.9"
open = "~2.0"
regex = "~1.5"
linkify = "~0.7"
native-tls = "~0.2"
openssl = "~0.10"
url = "~2"
tempfile = "~3.0"
dirs = "~3.0"
lazy_static = "~1.4"
ansi-parser = "~0.6"
percent-encoding="~2"
toml="~0.5"
serde="~1.0"
serde_derive="~1.0"
textwrap="~0.14"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_18"]